changed nim extension settings

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,11 @@
 ,
     "customizations": {
         "vscode": {
+            "settings": {
+                "nim.buildCommand": "js",
+                "nim.runOutputDirectory": "output/",
+                "nim.useNimCheck": false
+            },
             "extensions": [
                 "nimlang.nimlang"
             ]
